--- a/index.html
+++ b/index.html
@@ -1,1 +1,41 @@
-hello world from Valera
+<!DOCTYPE html>
+<html lang="ru">
+<head>
+    <meta charset="UTF-8">
+    <title>Главная</title>
+</head>
+<body>
+    <header>
+        <img src="Безымянный.jpg" alt="Логотип">
+        <ul>
+            <li>
+                <a href="#">Главная</a>
+            </li>
+            <li>
+                <a href="contacts.html">Контакты</a>
+            </li>
+        </ul>
+    </header>
+    <main>
+        <h1>HTML Практика 1</h1>
+        <p>Нанесение принтов на кружки очень простой способ выделить свою вещь </p>
+        <h3>Общее</h3>
+        <h4>Как наносится принт на кружку?</h4>
+        <p>При производстве данным методом изображение распечатывается на специальной сублимационной бумаге и под воздействием температуры и давления в термопрессе краситель проникает глубоко в структуру поверхности кружки под сублимацию.</p>
+        <h3>Примерная стоимость в Тюмени?</h3>
+        <p>~850р, при заказе оптом примерно 450р</p>
+        <hr>
+    </main>
+    <footer>
+        <h3>Подвал страницы</h3>
+        <p>В этом подвале указаны контактные данные.</p>
+        <hr>
+        <ul>
+            <li><a href="https://www.youtube.com/watch?v=TglT_LeJoBA&t=1s">Ссылка на YouTube</a></li>
+            <li>+7 (950) 487-36-23</li>
+            <li>example@gmail.com</li>
+        </ul>
+        <p>Все права защищены</p>
+    </footer>
+</body>
+</html>
