--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <header>
-        <img src="src\Безымя2нный.png" alt="Логотип">  
+        <img src="src\Безымя2нный.jpg" alt="Логотип">  
         <ul class="breadcrumbs">
             <li>
                 <a href="#">Главная</a>
